<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">
        <Preference
            android:key="link"
            android:summary="@string/link_device_summary"
            android:title="@string/link_device"
            android:icon="@drawable/baseline_leak_add_24"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/accessibility">
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/languages_dialogue_title"
            android:key="language"
            android:summary="@string/language_summary"
            android:title="@string/language_title"
            android:icon="@drawable/outline_type_specimen_24"/>
        <SwitchPreference
            android:key="subtitles"
            android:summary="@string/subtitles_summary"
            android:title="@string/enable_subtitles_title"
            android:icon="@drawable/outline_lyrics_24"/>
        <SwitchPreference
            android:key="enable_voice"
            android:summary="@string/enable_voice_summary"
            android:title="@string/enable_voice_title"
            android:icon="@drawable/baseline_voice_chat_24"/>
        <ListPreference
            android:dialogTitle="@string/voice_customization_dialogue_title"
            android:enabled="false"
            android:key="custom_voice"
            android:summary="@string/custom_voice_summary"
            android:title="@string/custom_voice_title"
            android:icon="@drawable/twotone_transcribe_24"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="help_category"
        android:title="@string/help">
        <Preference
            android:key="tutorial"
            android:summary="@string/tutorial_summary"
            android:title="@string/tutorial_title" />
        <Preference
            android:key="feedback"
            android:summary="@string/feedback_summary"
            android:title="@string/feedback_title"
            android:icon="@drawable/outline_sms_failed_24"/>

    </PreferenceCategory>

</PreferenceScreen>