<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:title="@string/home"
            android:icon="@drawable/ic_launcher_foreground"/>
        <item
            android:id="@+id/camera"
            android:title="@string/camera"
            android:icon="@drawable/ic_launcher_foreground"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_launcher_foreground"/>
        <item
            android:id="@+id/liveTranslation"
            android:title="@string/live_translation"
            android:icon="@drawable/ic_launcher_foreground"/>
        <item
            android:id="@+id/standaloneMode"
            android:title="@string/standalonemode"
            android:icon="@drawable/ic_launcher_foreground"/>

    </group>
</menu>